// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageReview Component Matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="ct-package-review page"
  >
    <div
      class="content col-md-8"
    >
      <h1>
        View Recently Submitted Package # 1
      </h1>
      <br />
      <div
        class="row"
      >
        <h2
          class="col-sm-6"
        >
          Package Details
        </h2>
        <div
          class="col-sm-6 text-sm-right mt-3 mt-sm-0"
        >
          <span
            class="file-href"
            role="button"
            tabindex="0"
          >
            Print Submission Sheet
          </span>
          <svg
            class="align-icon"
            color="#7F7F7F"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(127, 127, 127);"
            viewBox="0 0 16 16"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
            />
            <path
              d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
            />
          </svg>
        </div>
      </div>
      <br />
      <div
        class="row"
        data-test-id="detailsTable"
      >
        <div
          class="col-sm-12 col-lg-6"
        >
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted By:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Han Solo
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted Date:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    14-Jan-2021 10:57
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted To:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Kelowna Law Courts
                  </b>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-sm-12 col-lg-6"
        >
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Package Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    1
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Court File Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Court file number
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Rush Processing:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Yes
                  </b>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <br />
      <br />
      <nav
        class="nav nav-tabs"
        role="tablist"
      >
        <a
          aria-controls="controlled-tab-tabpane-documents"
          aria-selected="true"
          class="nav-item nav-link active"
          data-rb-event-key="documents"
          href="#"
          id="controlled-tab-tab-documents"
          role="tab"
        >
          Documents
        </a>
        <a
          aria-controls="controlled-tab-tabpane-parties"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="parties"
          href="#"
          id="controlled-tab-tab-parties"
          role="tab"
        >
          Parties
        </a>
        <a
          aria-controls="controlled-tab-tabpane-payment"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="payment"
          href="#"
          id="controlled-tab-tab-payment"
          role="tab"
        >
          Payment Status
        </a>
        <a
          aria-controls="controlled-tab-tabpane-rush"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="rush"
          href="#"
          id="controlled-tab-tab-rush"
          role="tab"
        >
          Rush Details
        </a>
        <a
          aria-controls="controlled-tab-tabpane-comments"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="comments"
          href="#"
          id="controlled-tab-tab-comments"
          role="tab"
        >
          Filing Comments
        </a>
      </nav>
      <div
        class="tab-content"
      >
        <div
          aria-hidden="false"
          aria-labelledby="controlled-tab-tab-documents"
          class="fade tab-pane active show"
          id="controlled-tab-tabpane-documents"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-document-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                File Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Document Type
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Status
              </span>
              <span
                class="d-none d-lg-inline col-lg-2"
              >
                Action (s)
              </span>
            </div>
            <ul>
              <li
                class="SUB"
              >
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  File Name:
                </span>
                <span
                  class="col-sm-8 col-lg-4 file-cell"
                >
                  <svg
                    color="#FCBA19"
                    fill="currentColor"
                    height="30"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(252, 186, 25);"
                    viewBox="0 0 24 24"
                    width="30"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                    />
                  </svg>
                  <span
                    class="file-href"
                    data-testid="btn-download-document"
                    role="button"
                    tabindex="0"
                  >
                    test-document.pdf
                  </span>
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Document Type:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                />
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Status:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                >
                  Submitted
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Action (s):
                </span>
                <span
                  class="col-sm-8 col-lg-2 file-cell"
                >
                  <span
                    class="file-href"
                    id="withdraw_1"
                    role="button"
                    tabindex="0"
                  >
                    withdraw
                  </span>
                  <svg
                    fill="currentColor"
                    height="1em"
                    id="withdraw-tooltip"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(117, 152, 202); font-size: 20px; margin-left: 10px;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                    />
                  </svg>
                  <div
                    class="bcgov-withdraw-tooltip "
                  />
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-parties"
          class="fade tab-pane"
          id="controlled-tab-tabpane-parties"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-party-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-6"
              >
                Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Party Role
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Party Type
              </span>
            </div>
            <ul>
              <li>
                <span
                  class="col-sm-12 col-lg-6"
                >
                  <svg
                    color="#FCBA19"
                    fill="currentColor"
                    height="30"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(252, 186, 25);"
                    viewBox="0 0 24 24"
                    width="30"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                    />
                  </svg>
                  Ross, Bob Q
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Party Role:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                >
                  Applicant
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Party Type:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                >
                  Individual
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-payment"
          class="fade tab-pane"
          id="controlled-tab-tabpane-payment"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-payment-list"
          >
            <table
              class="payment-table table table-borderless"
            >
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Document
                  </th>
                  <th
                    class="text-right"
                    scope="col"
                  >
                    Statutory Fee
                  </th>
                  <th
                    class="text-right"
                    scope="col"
                  >
                    Fees Charged to Date
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-right"
                  >
                    Subtotal: 
                  </td>
                  <td
                    class="sub-table top-border"
                  >
                    $0.00
                  </td>
                  <td
                    class="sub-table top-border"
                  >
                    $0.00
                  </td>
                  <td />
                </tr>
                <tr>
                  <td
                    class="text-right"
                  >
                    CSO Fees: 
                  </td>
                  <td
                    class="sub-table"
                  >
                    $7.00
                  </td>
                  <td
                    class="sub-table"
                  >
                    $7.00
                  </td>
                  <td />
                </tr>
                <tr>
                  <td
                    class="text-right"
                  >
                    Total Fees: 
                  </td>
                  <td
                    class="sub-table"
                  >
                    $7.00
                  </td>
                  <td
                    class="sub-table"
                  >
                    $7.00
                  </td>
                  <td />
                </tr>
              </tbody>
            </table>
            <div
              class="d-flex justify-content-end"
            >
              <span
                class="file-href"
                data-testid="btn-view-receipt"
                role="button"
                tabindex="0"
              >
                View Receipt
              </span>
              <svg
                class="align-icon"
                color="#7F7F7F"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(127, 127, 127);"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-rush"
          class="fade tab-pane"
          id="controlled-tab-tabpane-rush"
          role="tabpanel"
        >
          <br />
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Reason for requesting urgent (rush) filing:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    This is a reason. This is a reason. This is a reason. This is a reason.
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Contact Name:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Bob Ross
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Phone Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    1231231234
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Email:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    hello@hello.com
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Urgent (Rush) Request Status:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Processing
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Registry Notice:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    No
                  </b>
                </div>
              </div>
            </div>
          </div>
          <br />
          <div
            class="ct-document-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                File Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-4"
              />
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                Status
              </span>
            </div>
            <ul>
              <li
                class="SUB"
              >
                <span
                  class="label col-md-5 d-lg-none"
                >
                  File Name:
                </span>
                <span
                  class="col-md-5 col-lg-4 file-cell"
                >
                  <svg
                    color="#FCBA19"
                    fill="currentColor"
                    height="30"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(252, 186, 25);"
                    viewBox="0 0 24 24"
                    width="30"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                    />
                  </svg>
                  <span
                    class="file-href"
                    data-testid="uploaded-file"
                    role="button"
                    tabindex="0"
                  >
                    Test1.pdf
                  </span>
                </span>
                <span
                  class="label col-md-5 d-lg-none"
                />
                <span
                  class="col-md-5 col-lg-4"
                />
                <span
                  class="label col-md-5 d-lg-none"
                >
                  Status:
                </span>
                <span
                  class="col-md-5 col-lg-4"
                >
                  Processing
                </span>
              </li>
              <li
                class="SUB"
              >
                <span
                  class="label col-md-5 d-lg-none"
                >
                  File Name:
                </span>
                <span
                  class="col-md-5 col-lg-4 file-cell"
                >
                  <svg
                    color="#FCBA19"
                    fill="currentColor"
                    height="30"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(252, 186, 25);"
                    viewBox="0 0 24 24"
                    width="30"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                    />
                  </svg>
                  <span
                    class="file-href"
                    data-testid="uploaded-file"
                    role="button"
                    tabindex="0"
                  >
                    Test2.pdf
                  </span>
                </span>
                <span
                  class="label col-md-5 d-lg-none"
                />
                <span
                  class="col-md-5 col-lg-4"
                />
                <span
                  class="label col-md-5 d-lg-none"
                >
                  Status:
                </span>
                <span
                  class="col-md-5 col-lg-4"
                >
                  Processing
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-comments"
          class="fade tab-pane"
          id="controlled-tab-tabpane-comments"
          role="tabpanel"
        >
          <br />
          <h4>
            Filing Comments
          </h4>
          <div
            class="tabContent"
            id="filingComments"
          >
            Lorem ipsum dolor sit amet.&lt;script&gt;alert('Hi');&lt;/script&gt;

Duis aute irure dolor.
          </div>
        </div>
      </div>
      <br />
      <div
        class="row note"
      >
        <span
          class="fw-bold"
        >
          Please Note: 
        </span>
         Visit your CSO account to  
        <span
          class="file-href"
          data-testid="cso-link"
          role="button"
          tabindex="0"
        >
          view all your previously submitted packages.
        </span>
      </div>
      <section
        class="buttons pt-2 row"
      >
        <button
          class="bcgov-button bcgov-normal-white btn"
          data-testid=""
          type="button"
        >
          Return to Parent App
        </button>
      </section>
    </div>
    <div
      class="sidecard"
    >
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="csoAccountDetailsCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    Your CSO Account
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  CSO account 
                  <strong />
                   is linked to your BC Services Card account 
                  <strong>
                    username
                  </strong>
                   and will be used to file documents. 
                  <a
                    href="undefined/accounts/editProfile.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    View your CSO account details
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="aboutCsoCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    About E-File Submission
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  E-File Submission is a service to help you securely and electronically file documents with the Courts of British Columbia via Court Services Online. 
                  <a
                    href="undefined/about/index.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about CSO
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PackageReview Component Reload 1`] = `
<DocumentFragment>
  <div
    class="ct-package-review page"
  >
    <div
      class="content col-md-8"
    >
      <h1>
        View Recently Submitted Package # 1
      </h1>
      <br />
      <div
        class="row"
      >
        <h2
          class="col-sm-6"
        >
          Package Details
        </h2>
        <div
          class="col-sm-6 text-sm-right mt-3 mt-sm-0"
        >
          <span
            class="file-href"
            role="button"
            tabindex="0"
          >
            Print Submission Sheet
          </span>
          <svg
            class="align-icon"
            color="#7F7F7F"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(127, 127, 127);"
            viewBox="0 0 16 16"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
            />
            <path
              d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
            />
          </svg>
        </div>
      </div>
      <br />
      <div
        class="row"
        data-test-id="detailsTable"
      >
        <div
          class="col-sm-12 col-lg-6"
        >
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted By:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Han Solo
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted Date:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    14-Jan-2021 10:57
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted To:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Kelowna Law Courts
                  </b>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-sm-12 col-lg-6"
        >
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Package Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    1
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Court File Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Court file number
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Rush Processing:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    No
                  </b>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <br />
      <br />
      <nav
        class="nav nav-tabs"
        role="tablist"
      >
        <a
          aria-controls="controlled-tab-tabpane-documents"
          aria-selected="true"
          class="nav-item nav-link active"
          data-rb-event-key="documents"
          href="#"
          id="controlled-tab-tab-documents"
          role="tab"
        >
          Documents
        </a>
        <a
          aria-controls="controlled-tab-tabpane-parties"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="parties"
          href="#"
          id="controlled-tab-tab-parties"
          role="tab"
        >
          Parties
        </a>
        <a
          aria-controls="controlled-tab-tabpane-payment"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="payment"
          href="#"
          id="controlled-tab-tab-payment"
          role="tab"
        >
          Payment Status
        </a>
        <a
          aria-controls="controlled-tab-tabpane-rush"
          aria-disabled="true"
          aria-selected="false"
          class="nav-item nav-link disabled"
          data-rb-event-key="rush"
          href="#"
          id="controlled-tab-tab-rush"
          role="tab"
          tabindex="-1"
        >
          Rush Details
        </a>
        <a
          aria-controls="controlled-tab-tabpane-comments"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="comments"
          href="#"
          id="controlled-tab-tab-comments"
          role="tab"
        >
          Filing Comments
        </a>
      </nav>
      <div
        class="tab-content"
      >
        <div
          aria-hidden="false"
          aria-labelledby="controlled-tab-tab-documents"
          class="fade tab-pane active show"
          id="controlled-tab-tabpane-documents"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-document-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                File Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Document Type
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Status
              </span>
              <span
                class="d-none d-lg-inline col-lg-2"
              >
                Action (s)
              </span>
            </div>
            <ul>
              <li
                class="SUB"
              >
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  File Name:
                </span>
                <span
                  class="col-sm-8 col-lg-4 file-cell"
                >
                  <svg
                    color="#FCBA19"
                    fill="currentColor"
                    height="30"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(252, 186, 25);"
                    viewBox="0 0 24 24"
                    width="30"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                    />
                  </svg>
                  <span
                    class="file-href"
                    data-testid="btn-download-document"
                    role="button"
                    tabindex="0"
                  >
                    test-document.pdf
                  </span>
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Document Type:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                />
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Status:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                >
                  Submitted
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Action (s):
                </span>
                <span
                  class="col-sm-8 col-lg-2 file-cell"
                >
                  <span
                    class="file-href"
                    id="withdraw_1"
                    role="button"
                    tabindex="0"
                  >
                    withdraw
                  </span>
                  <svg
                    fill="currentColor"
                    height="1em"
                    id="withdraw-tooltip"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(117, 152, 202); font-size: 20px; margin-left: 10px;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                    />
                  </svg>
                  <div
                    class="bcgov-withdraw-tooltip "
                  />
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-parties"
          class="fade tab-pane"
          id="controlled-tab-tabpane-parties"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-party-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-6"
              >
                Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Party Role
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Party Type
              </span>
            </div>
            <ul />
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-payment"
          class="fade tab-pane"
          id="controlled-tab-tabpane-payment"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-payment-list"
          >
            <table
              class="payment-table table table-borderless"
            >
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Document
                  </th>
                  <th
                    class="text-right"
                    scope="col"
                  >
                    Statutory Fee
                  </th>
                  <th
                    class="text-right"
                    scope="col"
                  >
                    Fees Charged to Date
                  </th>
                </tr>
              </thead>
              <tbody />
            </table>
            <div
              class="d-flex justify-content-end"
            >
              <span
                class="file-href"
                data-testid="btn-view-receipt"
                role="button"
                tabindex="0"
              >
                View Receipt
              </span>
              <svg
                class="align-icon"
                color="#7F7F7F"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(127, 127, 127);"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-rush"
          class="fade tab-pane"
          id="controlled-tab-tabpane-rush"
          role="tabpanel"
        >
          <br />
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            />
          </div>
          <br />
          <div
            class="ct-document-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                File Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-4"
              />
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                Status
              </span>
            </div>
            <ul />
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-comments"
          class="fade tab-pane"
          id="controlled-tab-tabpane-comments"
          role="tabpanel"
        >
          <br />
          <h4>
            Filing Comments
          </h4>
          <div
            class="tabContent"
            id="filingComments"
          />
        </div>
      </div>
      <br />
      <div
        class="row note"
      >
        <span
          class="fw-bold"
        >
          Please Note: 
        </span>
         Visit your CSO account to  
        <span
          class="file-href"
          data-testid="cso-link"
          role="button"
          tabindex="0"
        >
          view all your previously submitted packages.
        </span>
      </div>
      <section
        class="buttons pt-2 row"
      >
        <button
          class="bcgov-button bcgov-normal-white btn"
          data-testid=""
          type="button"
        >
          Return to Parent App
        </button>
      </section>
    </div>
    <div
      class="sidecard"
    >
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="csoAccountDetailsCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    Your CSO Account
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  CSO account 
                  <strong />
                   is linked to your BC Services Card account 
                  <strong>
                    username
                  </strong>
                   and will be used to file documents. 
                  <a
                    href="undefined/accounts/editProfile.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    View your CSO account details
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="aboutCsoCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    About E-File Submission
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  E-File Submission is a service to help you securely and electronically file documents with the Courts of British Columbia via Court Services Online. 
                  <a
                    href="undefined/about/index.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about CSO
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PackageReview Component Withdraw document network error 1`] = `
<DocumentFragment>
  <div
    class="ct-package-review page"
  >
    <div
      class="content col-md-8"
    >
      <h1>
        View Recently Submitted Package # 1
      </h1>
      <br />
      <div
        class="row"
      >
        <h2
          class="col-sm-6"
        >
          Package Details
        </h2>
        <div
          class="col-sm-6 text-sm-right mt-3 mt-sm-0"
        >
          <span
            class="file-href"
            role="button"
            tabindex="0"
          >
            Print Submission Sheet
          </span>
          <svg
            class="align-icon"
            color="#7F7F7F"
            fill="currentColor"
            height="24"
            stroke="currentColor"
            stroke-width="0"
            style="color: rgb(127, 127, 127);"
            viewBox="0 0 16 16"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"
            />
            <path
              d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"
            />
          </svg>
        </div>
      </div>
      <br />
      <div
        class="row"
        data-test-id="detailsTable"
      >
        <div
          class="col-sm-12 col-lg-6"
        >
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted By:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Han Solo
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted Date:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    14-Jan-2021 10:57
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Submitted To:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Kelowna Law Courts
                  </b>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-sm-12 col-lg-6"
        >
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            >
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Package Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    1
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Court File Number:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    Court file number
                  </b>
                </div>
              </div>
              <div
                class="bcgov-row "
              >
                <div
                  class="bcgov-fill-width"
                >
                  Rush Processing:
                </div>
                <div
                  class="bcgov-table-value "
                >
                  <b>
                    No
                  </b>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <br />
      <br />
      <nav
        class="nav nav-tabs"
        role="tablist"
      >
        <a
          aria-controls="controlled-tab-tabpane-documents"
          aria-selected="true"
          class="nav-item nav-link active"
          data-rb-event-key="documents"
          href="#"
          id="controlled-tab-tab-documents"
          role="tab"
        >
          Documents
        </a>
        <a
          aria-controls="controlled-tab-tabpane-parties"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="parties"
          href="#"
          id="controlled-tab-tab-parties"
          role="tab"
        >
          Parties
        </a>
        <a
          aria-controls="controlled-tab-tabpane-payment"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="payment"
          href="#"
          id="controlled-tab-tab-payment"
          role="tab"
        >
          Payment Status
        </a>
        <a
          aria-controls="controlled-tab-tabpane-rush"
          aria-disabled="true"
          aria-selected="false"
          class="nav-item nav-link disabled"
          data-rb-event-key="rush"
          href="#"
          id="controlled-tab-tab-rush"
          role="tab"
          tabindex="-1"
        >
          Rush Details
        </a>
        <a
          aria-controls="controlled-tab-tabpane-comments"
          aria-selected="false"
          class="nav-item nav-link"
          data-rb-event-key="comments"
          href="#"
          id="controlled-tab-tab-comments"
          role="tab"
        >
          Filing Comments
        </a>
      </nav>
      <div
        class="tab-content"
      >
        <div
          aria-hidden="false"
          aria-labelledby="controlled-tab-tab-documents"
          class="fade tab-pane active show"
          id="controlled-tab-tabpane-documents"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-document-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                File Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Document Type
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Status
              </span>
              <span
                class="d-none d-lg-inline col-lg-2"
              >
                Action (s)
              </span>
            </div>
            <ul>
              <li
                class="SUB"
              >
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  File Name:
                </span>
                <span
                  class="col-sm-8 col-lg-4 file-cell"
                >
                  <svg
                    color="#FCBA19"
                    fill="currentColor"
                    height="30"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(252, 186, 25);"
                    viewBox="0 0 24 24"
                    width="30"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"
                    />
                  </svg>
                  <span
                    class="file-href"
                    data-testid="btn-download-document"
                    role="button"
                    tabindex="0"
                  >
                    test-document.pdf
                  </span>
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Document Type:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                />
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Status:
                </span>
                <span
                  class="col-sm-8 col-lg-3"
                >
                  Submitted
                </span>
                <span
                  class="label col-sm-4 d-lg-none"
                >
                  Action (s):
                </span>
                <span
                  class="col-sm-8 col-lg-2 file-cell"
                >
                  <span
                    class="file-href"
                    id="withdraw_1"
                    role="button"
                    tabindex="0"
                  >
                    withdraw
                  </span>
                  <svg
                    fill="currentColor"
                    height="1em"
                    id="withdraw-tooltip"
                    stroke="currentColor"
                    stroke-width="0"
                    style="color: rgb(117, 152, 202); font-size: 20px; margin-left: 10px;"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                    />
                  </svg>
                  <div
                    class="bcgov-withdraw-tooltip "
                  />
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-parties"
          class="fade tab-pane"
          id="controlled-tab-tabpane-parties"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-party-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-6"
              >
                Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Party Role
              </span>
              <span
                class="d-none d-lg-inline col-lg-3"
              >
                Party Type
              </span>
            </div>
            <ul />
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-payment"
          class="fade tab-pane"
          id="controlled-tab-tabpane-payment"
          role="tabpanel"
        >
          <br />
          <div
            class="ct-payment-list"
          >
            <table
              class="payment-table table table-borderless"
            >
              <thead>
                <tr>
                  <th
                    scope="col"
                  >
                    Document
                  </th>
                  <th
                    class="text-right"
                    scope="col"
                  >
                    Statutory Fee
                  </th>
                  <th
                    class="text-right"
                    scope="col"
                  >
                    Fees Charged to Date
                  </th>
                </tr>
              </thead>
              <tbody />
            </table>
            <div
              class="d-flex justify-content-end"
            >
              <span
                class="file-href"
                data-testid="btn-view-receipt"
                role="button"
                tabindex="0"
              >
                View Receipt
              </span>
              <svg
                class="align-icon"
                color="#7F7F7F"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(127, 127, 127);"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-rush"
          class="fade tab-pane"
          id="controlled-tab-tabpane-rush"
          role="tabpanel"
        >
          <br />
          <div
            class="bcgov-table "
          >
            <b />
            <div
              class="bcgov-table-body"
            />
          </div>
          <br />
          <div
            class="ct-document-list"
          >
            <div
              class="header"
            >
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                File Name
              </span>
              <span
                class="d-none d-lg-inline col-lg-4"
              />
              <span
                class="d-none d-lg-inline col-lg-4"
              >
                Status
              </span>
            </div>
            <ul />
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="controlled-tab-tab-comments"
          class="fade tab-pane"
          id="controlled-tab-tabpane-comments"
          role="tabpanel"
        >
          <br />
          <h4>
            Filing Comments
          </h4>
          <div
            class="tabContent"
            id="filingComments"
          />
        </div>
      </div>
      <br />
      <div
        class="row note"
      >
        <span
          class="fw-bold"
        >
          Please Note: 
        </span>
         Visit your CSO account to  
        <span
          class="file-href"
          data-testid="cso-link"
          role="button"
          tabindex="0"
        >
          view all your previously submitted packages.
        </span>
      </div>
      <section
        class="buttons pt-2 row"
      >
        <button
          class="bcgov-button bcgov-normal-white btn"
          data-testid=""
          type="button"
        >
          Return to Parent App
        </button>
      </section>
    </div>
    <div
      class="sidecard"
    >
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="csoAccountDetailsCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    Your CSO Account
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  CSO account 
                  <strong />
                   is linked to your BC Services Card account 
                  <strong>
                    username
                  </strong>
                   and will be used to file documents. 
                  <a
                    href="undefined/accounts/editProfile.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    View your CSO account details
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
      <div
        class="bcgov-wide-dashboard-spacing"
        style="position: relative;"
      >
        <div
          class="col-12 pt-2"
          style="position: relative;"
        >
          <p />
          <section
            class="bcgov-bluegrey-container"
            id="aboutCsoCard"
          >
            <div
              class="bcgov-container-background bcgov-bluegrey-heading"
            >
              <h2
                class="bcgov-heading-style"
              >
                <div
                  class="bcgov-side-card-row"
                >
                  <div
                    class="bcgov-round-icon-wrapper"
                  >
                    <svg
                      class="bcgov-side-card-icon"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M11 7h2v2h-2V7zm0 4h2v6h-2v-6zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="bcgov-side-card-title"
                  >
                    About E-File Submission
                  </div>
                </div>
              </h2>
            </div>
            <div
              class="bcgov-bluegrey-content"
            >
              <span
                class="bcgov-content-style"
              >
                <p>
                  E-File Submission is a service to help you securely and electronically file documents with the Courts of British Columbia via Court Services Online. 
                  <a
                    href="undefined/about/index.do"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Learn more about CSO
                  </a>
                  .
                </p>
              </span>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
